syntax = "proto3";

message StopContainersRequest {
  optional string request_id = 1;
  repeated string container_names = 2;
}

enum ShutdownStatus {
  NOT_STARTED = 0;                // The thread has not been started
  WAITING_FOR_NICE_SHUTDOWN = 1;  // Nice ("kill") shutdown has been initiated
  WAITING_FOR_FORCE_SHUTDOWN =
      2;      // Force shutdown ("kill -9") has been initiated
  DONE = 3;   // Shutdown is complete
  ERROR = 4;  // An error was encountered
}

message ContainerStatus {
  optional ShutdownStatus status = 1;
  optional string error_message = 2;
}

message StopContainersStatusRequest {
  optional string request_id = 1;
}

message StopContainersResponse {
  optional ShutdownStatus status = 1;
  optional string error_message = 2;
  map<string, ContainerStatus> container_status = 3;
}
